[project]
name = "pdf-analyzer"
version = "0.1.0"
description = "Extract selectable PDF text into AI-friendly Markdown or plain text."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "onnxruntime>=1.26.0",
    "pypdf>=4.3.1",
    "rapidocr>=3.8.1",
]

[project.scripts]
pdf-extract = "pdf_analyzer.cli:main"
pdf-ocr = "pdf_analyzer.ocr_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pyinstaller>=6.21.0",
]
